--- a/index.html
+++ b/index.html
@@ -2652,7 +2652,7 @@ button:hover{background:#1e293b;}
         } else {
           // NEW: treat anything else as a search query
           const query = encodeURIComponent(url);
-          const searchUrl = `https://www.google.com/search?q=${query}`;
+          const searchUrl = `https://www.bing.com/search?q=${query}`;
 
           const iframe = document.createElement("iframe");
           iframe.src = searchUrl;
