--- a/index.html
+++ b/index.html
@@ -2323,7 +2323,7 @@ fileInput.addEventListener("change", () => {
   const files = Array.from(fileInput.files || []);
   if (!files.length) return;
 
-  const textTypes = [".txt", ".md", ".log", ".css", ".html", ".js", ".json"];
+  const textTypes = [".txt", ".md", ".log", ".css", ".html", ".js", ".json", ".svg", ".xml"];
   const imageTypes = [".png", ".jpg", ".jpeg", ".gif"];
   const mediaTypes = [".mp4", ".webm", ".mp3", ".wav", ".ogg"];
 
