--- a/index.html
+++ b/index.html
@@ -1765,7 +1765,9 @@ button:hover{background:#1e293b;}
               ".webm":"media",
               ".mp3":"media",
               ".wav":"media",
-              ".ogg":"media"
+              ".ogg":"media",
+              ".xml": "browser",
+              ".svg": "browser"
             }
           });
           state.currentUserId = id;
@@ -1816,7 +1818,9 @@ button:hover{background:#1e293b;}
               ".webm":"media",
               ".mp3":"media",
               ".wav":"media",
-              ".ogg":"media"
+              ".ogg":"media",
+              ".xml": "browser",
+              ".svg": "browser"
           }
         });
         state.currentUserId=id; saveState();
